Add manifest link and service worker registration
Added a link to the manifest and registered a service worker.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         #config-section { display: none; }
         input { width: 100%; padding: 12px; margin-bottom: 10px; border-radius: 10px; border: 1px solid #ddd; box-sizing: border-box; }
     </style>
+    <link rel="manifest" href="/manifest.json">
+
+<script>
+  // Enregistrement du Service Worker pour l'installation
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/sw.js');
+  }
+</script>
 </head>
 <body>
     <div id="status-msg">Chargement...</div>
