Add apple touch icon link
Add apple touch icon link to the HTML file.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         input { width: 100%; padding: 12px; margin-bottom: 10px; border-radius: 10px; border: 1px solid #ddd; box-sizing: border-box; }
     </style>
     <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/icon.png">
 
 <script>
   // Enregistrement du Service Worker pour l'installation
