--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div style="margin-top: 20px; border-top: 2px solid #eee; padding-top: 15px;">
-            <h4 style="margin: 0 0 15px 0; color: #2c3e50;">⏰ Planning Automatique</h4>
+            <h4 style="margin: 0 0 15px 0; color: #2c3e50;">⏰ Planning Automatiqu</h4>
             <div style="display: flex; justify-content: space-between; gap: 10px; margin-bottom: 15px;">
                 <div style="flex: 1;">
                     <label style="display: block; font-size: 0.7rem; color: #7f8c8d; margin-bottom: 5px;">ON (h)</label>
