--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         .btn-opt { background: #f1f3f5; color: var(--text); }
         .btn-active { background: var(--primary) !important; color: white !important; }
 
-        /* Nouveau style pour la vitesse de ventilation */
+        /* Style pour la vitesse de ventilation */
         .fan-selector { display: flex; background: #f1f3f5; border-radius: 12px; padding: 4px; margin-bottom: 20px; gap: 4px; }
         .fan-btn { flex: 1; border: none; background: none; padding: 10px; border-radius: 8px; font-size: 0.75rem; font-weight: bold; cursor: pointer; color: var(--soft); transition: 0.3s; }
         .fan-btn.active { background: white; color: var(--primary); box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
@@ -81,25 +81,8 @@
             <button class="btn btn-opt" id="feat-health" onclick="runCommand('health', true)">✨ Health</button>
         </div>
 
-        <div style="margin-top: 20px; border-top: 2px solid #eee; padding-top: 15px;">
-            <h4 style="margin: 0 0 15px 0; color: #2c3e50;">⏰ Planning</h4>
-            <div style="display: flex; justify-content: space-between; gap: 10px; margin-bottom: 15px;">
-                <div style="flex: 1;">
-                    <label style="display: block; font-size: 0.7rem; color: #7f8c8d; margin-bottom: 5px;">ON (h)</label>
-                    <input type="number" id="h-on" value="7" min="0" max="23">
-                </div>
-                <div style="flex: 1;">
-                    <label style="display: block; font-size: 0.7rem; color: #7f8c8d; margin-bottom: 5px;">OFF (h)</label>
-                    <input type="number" id="h-off" value="22" min="0" max="23">
-                </div>
-            </div>
-            <button id="save-btn" onclick="saveToCloud()" style="width: 100%; padding: 12px; background: #3498db; color: white; border: none; border-radius: 10px; font-weight: bold; cursor: pointer;">
-                ENREGISTRER
-            </button>
-        </div>
-
         <div id="last-update">Dernière synchro : --:--:--</div>
-        <button style="background:none; border:none; color:var(--soft); cursor:pointer; margin-top:15px;" onclick="toggleView(true)">⚙️ Paramètres</button>
+        <button style="background:none; border:none; color:var(--soft); cursor:pointer; margin-top:20px;" onclick="toggleView(true)">⚙️ Paramètres</button>
     </div>
 
     <div class="card" id="config-section">
@@ -140,7 +123,6 @@
 
         function updateUI(statusArray) {
             statusArray.forEach(item => {
-                // Température
                 if (item.code === 'temp_current') {
                     document.getElementById('room-val').innerText = "Pièce : " + (item.value / 10).toFixed(1) + "°C";
                 }
@@ -148,12 +130,10 @@
                     tempSet = item.value;
                     document.getElementById('set-val').innerText = (tempSet / 10).toFixed(1) + "°C";
                 }
-                // Switch ON/OFF
                 if (item.code === 'switch') {
                     document.body.classList.toggle('status-off', !item.value);
                     document.getElementById('status-msg').innerText = item.value ? "En marche" : "À l'arrêt";
                 }
-                // Mode de fonctionnement
                 if (item.code === 'mode') {
                     document.body.classList.remove('mode-heat', 'mode-cold', 'mode-fan');
                     document.querySelectorAll('.btn-opt').forEach(b => b.classList.remove('btn-active'));
@@ -163,7 +143,6 @@
                     if (item.value === 'cold') document.body.classList.add('mode-cold');
                     if (item.value === 'fan') document.body.classList.add('mode-fan');
                 }
-                // Vitesse Ventilo (Nouveau)
                 if (item.code === 'fan_speed_enum') {
                     document.querySelectorAll('.fan-btn').forEach(b => b.classList.remove('active'));
                     const fanBtn = document.getElementById('fan-' + item.value);
@@ -212,26 +191,6 @@
             localStorage.setItem('tuya_secret', document.getElementById('cfg-sec').value);
             localStorage.setItem('tuya_device', document.getElementById('cfg-dev').value);
             location.reload();
-        }
-
-        async function saveToCloud() {
-            const btn = document.getElementById('save-btn');
-            btn.innerText = "⏳...";
-            try {
-                const res = await fetch('/api/save-hours', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ 
-                        hourOn: document.getElementById('h-on').value, 
-                        hourOff: document.getElementById('h-off').value 
-                    })
-                });
-                if (res.ok) {
-                    btn.innerText = "✅";
-                    btn.style.background = "#2ecc71";
-                    setTimeout(() => { btn.innerText = "ENREGISTRER"; btn.style.background = "#3498db"; }, 2000);
-                }
-            } catch (e) { btn.innerText = "❌"; }
         }
 
         if (!isConfigured) { toggleView(true); } 
