--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="help-item"><b>❄️ Modes</b><span><b>Froid :</b> Climatisation. <b>Chaud :</b> Chauffage. <b>Sec :</b> Déshumidification. <b>Fan :</b> Ventilateur seul. <b>8°C :</b> Hors-gel pour éviter que la maison ne gèle en hiver.</span></div>
             <div class="help-item"><b>🚀 Turbo & Ventilation</b><span>Le mode Turbo force la puissance maximale. Mute est idéal pour dormir (silence total).</span></div>
             <div class="help-item"><b>🔄 Oscillations (3D)</b><span>Permet de diriger l'air partout (All), seulement horizontalement ou verticalement. Vous pouvez aussi fixer un angle précis via les menus déroulants.</span></div>
-            <div class="help-item"><b>🍃 Options</b><span><b>Éco :</b> Réduit la consommation. <b>Santé :</b> Active l'ioniseur d'air. <b>Light :</b> Éteint l'affichage sur l'appareil. <b>Clean :</b> Gèle et nettoie l'évaporateur (cycle de 15-30min).</span></div>
+            <div class="help-item"><b>🍃 Options</b><span><b>Éco :</b> Réduit la consommation. <b>Santé :</b> Active l'ioniseur d'air. <b>Light :</b> Éteint l'affichage sur l'appareil. <b>Clean :</b> Fonction Auto-Nettoyage (Clean) (cycle de 15-30min).</span></div>
             <div class="help-item"><b>⚡ Stats</b><span>Affiche la consommation réelle en Watts et le temps d'utilisation total depuis l'installation.</span></div>
             
             <button class="btn pwr-on" style="width:100%" onclick="closeHelp()">J'AI COMPRIS</button>
