--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="Ma Clim">
+<meta name="apple-mobile-web-app-title" content="MyAirton">
 <meta name="theme-color" content="#ffffff">
-    
+
+<title>MyAirton Connect - Contrôleur de Climatisation Intelligent</title>
+<meta name="description" content="Pilotez votre climatiseur Airton Tuya/Smart Life avec cette interface PWA légère. Contrôle de température, mode auto-nettoyage et suivi d'usage sans intermédiaire.">
+<meta name="keywords" content="climatisation, Tuya, Smart Life, PWA, domotique, contrôleur clim, Airton, auto-nettoyage">
+<meta name="author" content="Mikefri">
+<meta name="robots" content="index, follow">
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://votre-username.github.io/ClimAirton/">
+<meta property="og:title" content="MyAirton Connect - Votre Clim en PWA">
+<meta property="og:description" content="L'interface web rapide pour piloter votre confort. Installation facile sur écran d'accueil.">
+<meta property="og:image" content="icon.png">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="MyAirton Connect">
+<meta name="twitter:description" content="Contrôleur de clim intelligent et privé pour appareils compatibles Tuya.">
+<meta name="twitter:image" content="icon.png">
 
 <link rel="manifest" href="manifest.json">
 <link rel="apple-touch-icon" href="icon.png">
