--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
 </head>
 <body>
 
-    <div id="status-msg">Initialisation...</div>
+    <div id="status-msg">Connexion...</div>
+<div id="power-display" style="font-weight: bold; margin-top: 5px; font-size: 1.1rem; color: #2ecc71;">
+    Statut : ALLUMÉ ✅
+</div>
     
     <div class="card" id="main-ui">
         <button onclick="openHelp()" style="position:absolute; top:15px; right:15px; border:none; background:#f1f3f5; border-radius:50%; width:35px; height:35px; cursor:pointer; font-weight:bold; color:var(--primary);">?</button>
