--- a/index.html
+++ b/index.html
@@ -104,6 +104,25 @@
 .card input::placeholder {
     color: #b0bec5;
 }
+
+      @keyframes pulse-green {
+    0% { opacity: 1; }
+    50% { opacity: 0.5; }
+    100% { opacity: 1; }
+}
+
+.badge-allume {
+    background: #e8f5e9 !important;
+    color: #2ecc71 !important;
+    animation: pulse-green 2s infinite ease-in-out;
+    border: 1px solid #2ecc71;
+}
+
+.badge-eteint {
+    background: #f1f3f5 !important;
+    color: #95a5a6 !important;
+    border: 1px solid #dee2e6;
+}
     </style>
 </head>
 <body>
@@ -282,13 +301,17 @@
     const badge = document.getElementById('power-badge');
     if (item.value === true) {
         badge.innerText = "● ALLUMÉ";
-        badge.style.background = "#e8f5e9"; // Fond vert très clair
-        badge.style.color = "#2ecc71";      // Texte vert
+        badge.className = "badge-allume";
+        badge.style.position = "absolute"; // Garde le badge en haut à gauche
+        badge.style.top = "15px";
+        badge.style.left = "20px";
         document.body.classList.remove('status-off');
     } else {
         badge.innerText = "○ ÉTEINT";
-        badge.style.background = "#ffebee"; // Fond rouge très clair
-        badge.style.color = "#e74c3c";      // Texte rouge
+        badge.className = "badge-eteint";
+        badge.style.position = "absolute";
+        badge.style.top = "15px";
+        badge.style.left = "20px";
         document.body.classList.add('status-off');
     }
 }
