--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta name="robots" content="index, follow">
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://votre-username.github.io/ClimAirton/">
+<meta property="og:url" content="https://clim-airton.vercel.app/">
 <meta property="og:title" content="MyAirton Connect - Votre Clim en PWA">
 <meta property="og:description" content="L'interface web rapide pour piloter votre confort. Installation facile sur écran d'accueil.">
 <meta property="og:image" content="icon.png">
