--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
     <title>Airton Pro Control Premium</title>
     <style>
         :root { --bg: #f0f3f7; --card: #ffffff; --primary: #3498db; --success: #2ecc71; --danger: #e74c3c; --text: #2c3e50; --soft: #95a5a6; --accent: #9b59b6; }
-        body { font-family: -apple-system, sans-serif; background: var(--bg); color: var(--text); display: flex; flex-direction: column; align-items: center; padding: 20px; margin: 0; transition: 0.5s; padding-bottom: 50px; }
+        body { 
+    background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); 
+    color: #f8fafc; 
+    font-family: 'Inter', sans-serif; 
+    min-height: 100vh; 
+    padding: 20px 0; 
+}
         body.mode-cold { background-color: #e3f2fd; }
         body.mode-heat { background-color: #fbe9e7; }
         body.status-off { filter: grayscale(0.8); opacity: 0.9; }
